--- a/static/css/schema.default.css
+++ b/static/css/schema.default.css
@@ -365,7 +365,6 @@ table, tr {
         z-index: 1;
     }
 
-
 .viewport {
     position: absolute;
     top: 0;
@@ -514,6 +513,10 @@ table, tr {
 }
 .margin-top-m {
     margin-top: 5px;
+}
+
+.margin-top-0{
+    margin-top:0;
 }
 
 .margin-top-l {
