--- a/static/css/app.css
+++ b/static/css/app.css
@@ -38,3 +38,25 @@ a{
     overflow-y:auto;
     clear: both;
 }
+
+.itemborder+itemborder{
+    border-top: 1px solid rgba(233, 233, 233, 1);
+}
+
+.iteminrow{
+    display: flex;
+    flex-direction: row;
+}
+
+.iteminrow > *{
+    flex: auto;
+}
+
+.itemstate{
+    position: relative;
+    display: block;
+}
+
+.itemstate .hasReply{
+    right: 0;
+}
