--- a/static/css/theme/default.css
+++ b/static/css/theme/default.css
@@ -103,6 +103,10 @@ input:-ms-input-placeholder,
     color: #da2717;
 }
 
+.color-red{
+    color:red;
+}
+
 .background-color-white {
     background-color: white;
 }
